-
Bug
-
Resolution: Done
-
P1: Critical
-
None
-
5.6.0
-
None
-
Arch Linux x86_64, two different machines (Intel and AMD).
«var b = [1, 2, 3, 4, 5, 6, 7, 8, 9]; b.unshift(0); console.log(b);» segfaults.
«var b = [1, 2, 3, 4, 5, 6, 7, 8, 9]; b.unshift(0); console.log(JSON.stringify(b));» prints «[0,5,6,7,8,9,null,null,null,null]»
«var b = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; b.unshift(0); console.log(JSON.stringify(b));» prints «[0,null,null,null,null,1,2,3,4,5,6]».
This was working in 5.5.x afaik.
For Gerrit Dashboard: QTBUG-52065 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
155834,5 | Fix memory corruption when calling Array.unshift() | 5.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |